v1.12.2
======
Other
--------
- [#563] Remove leftover reference to Python 3.5 support

v1.12.1
======
Fix pylint errors and build errors on Travis-CI

Bugs
--------
- Issue #557 - SFType arguments were re-arranged from v1.11.5 causing failure for some users explicitly calling SFType and using default arguement position

v1.12.0
======
Drop support for Python 3.5

Features
--------
- [#507] Added automatic session refresh
- [#546] Added dynamic sized batches to respect bulk api limits
- [#548] Added optional dict flag for results returned in queries
- [#550] Added support for OAuth2 endpoints

v1.11.5
======
Hotfix missing wsdl file

Bugs
--------
- Issue #533 Fix missing metadata.wsdl file

v1.11.5
======
Changes as of 2022-01-05

Bugs
--------
- [#518] Fix hanging batch results in bulk api

Features
--------
- [#475] Added support for all metadata api operations
- [#485] Added base64 function to support upload, update, and get

Other
--------
- [#495] Add parse_float to allow parsing of floats to decimal.Decimal
- [#512] Updated README information for JWT Token


v1.11.4
======
Changes as of 2021-09-09

Other
- [#494] Raise exception when bulk query returns a failure status
- [#503] Fix lint warnings
- [#497] Support non-standard https port number

v1.11.3
======
Bugs
--------
- [431] Fix timezone handling

v1.11.2
======
Bugs
--------
- [469] Fix bulk call results returning nested list

v1.11.1
======
Features
--------
- [445] Added wrapper for Tooling API
- [451] Support JWT without file for private key


Bugs
----
- [454] Fixed typo in metadata file
- [443] Fix to prevent silent failure by preventing NaN in payload

v1.11.0
======
- [375] Added file based metadata deployment

v1.10.1
======

Other
-----

- [405] Update readme to remove syntax error in bulk
- [394] Add format_soql and format_external_id functions
- [393] Updated readme for JWT authentication
- Update readme to remove python 3.3/3.4

v1.10.0
=====

Features
--------